...

    var id: String { rawValue }

    var title: String {
        switch self {
        case .myCards:
            "我的名片"
        case .cardHolder:
            "名片夹"
        }
    }
}

...
